# rust_50

./: .gitignore  Cargo.toml  README.md
actix_api/: Cargo.toml  README.md
actix_api/src/: add.rhai  divide.rhai  exponent.rhai  main.rs  multiply.rhai  subtract.rhai
api_calls/: Cargo.toml  README.md
api_calls/src/: main.rs
async_await/: Cargo.toml  README.md
async_await/src/: main.rs
auth/: Cargo.toml  README.md
auth/src/: main.rs
compress/: README.md
compress_youtube/: Cargo.toml
compress_youtube/src/: main.rs
decompress/: Cargo.toml  README.md
decompress/src/: main.rs
extract_links/: Cargo.toml  README.md
extract_links/src/: main.rs
get_request/: Cargo.toml  README.md
get_request/src/: main.rs
git_autoflow/: Cargo.toml  README.md
git_autoflow/src/: README.md  main.rs
image_download/: Cargo.toml  README.md
image_download/src/: main.rs
mongo_conn/: Cargo.toml  README.md
mongo_conn/src/: main.rs
pass_vault/: Cargo.toml  passwords.json
pass_vault/src/: main.rs  pw_entry.rs
psql_conn/: Cargo.toml  README.md
psql_conn/src/: main.rs
read_csv/: README.md
read_csv/src/: main.rs
read_json/: Cargo.toml  README.md
read_json/src/: main.rs
rust-sqlite/: Cargo.toml  README.md
rust-sqlite/src/: main.rs
write_json/: Cargo.toml  README.md
write_json/src/: main.rs
