[package]
name = "rust-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-async-std-native-tls" ] }
